--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div id="react-root"></div>
+        <script src="js/Button.js" type="text/javascript"></script>
         <script src="js/Content.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
     </body>
