Use property types

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Scaling React Components</title>
         <script src="js/react.js" type="text/javascript"></script>
         <script src="js/react-dom.js" type="text/javascript"></script>
+        <script src="js/prop-types.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="react-root"></div>
